version firefox (pouvait bugué selon la version)

--- a/style.css
+++ b/style.css
@@ -419,7 +419,7 @@ canvas {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-bottom: 1%;
+    padding-bottom: 0.5%;
 }
 
 .slide p {
